[gd_scene load_steps=35 format=3 uid="uid://cs6e2v3qews85"]

[ext_resource type="Texture2D" uid="uid://3ixyofqm3fpf" path="res://barkley2/assets/b2_original/images/merged/sPrisonGenericToilet.png" id="1_sclys"]
[ext_resource type="Script" uid="uid://cwpyjts6vppp3" path="res://barkley2/scenes/Objects/_interactiveActor/_prison/_inmates/o_prison_generic_toilet.gd" id="2_lg4k8"]
[ext_resource type="Texture2D" uid="uid://dqci6x8ydmjux" path="res://barkley2/assets/b2_original/images/merged/sPrisonHead.png" id="3_tfmqp"]
[ext_resource type="Texture2D" uid="uid://ctslvnd2b46sx" path="res://barkley2/assets/b2_original/images/merged/sPrisonFace.png" id="4_xnu0y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_58xyf"]
atlas = ExtResource("1_sclys")
region = Rect2(0, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_fghl6"]
atlas = ExtResource("1_sclys")
region = Rect2(26, 0, 26, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_rrg3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58xyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fghl6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_irc2p"]
atlas = ExtResource("3_tfmqp")
region = Rect2(0, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_06mwp"]
atlas = ExtResource("3_tfmqp")
region = Rect2(18, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_55cbb"]
atlas = ExtResource("3_tfmqp")
region = Rect2(36, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_snnsj"]
atlas = ExtResource("3_tfmqp")
region = Rect2(54, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2dd5"]
atlas = ExtResource("3_tfmqp")
region = Rect2(72, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0rqi"]
atlas = ExtResource("3_tfmqp")
region = Rect2(90, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dljvc"]
atlas = ExtResource("3_tfmqp")
region = Rect2(108, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xoaa"]
atlas = ExtResource("3_tfmqp")
region = Rect2(126, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ley8v"]
atlas = ExtResource("3_tfmqp")
region = Rect2(144, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4u0k"]
atlas = ExtResource("3_tfmqp")
region = Rect2(162, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kp1g"]
atlas = ExtResource("3_tfmqp")
region = Rect2(180, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx6sx"]
atlas = ExtResource("3_tfmqp")
region = Rect2(198, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtorj"]
atlas = ExtResource("3_tfmqp")
region = Rect2(216, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_72be3"]
atlas = ExtResource("3_tfmqp")
region = Rect2(234, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tq5c"]
atlas = ExtResource("3_tfmqp")
region = Rect2(252, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_b62yd"]
atlas = ExtResource("3_tfmqp")
region = Rect2(270, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_38p31"]
atlas = ExtResource("3_tfmqp")
region = Rect2(288, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v86r"]
atlas = ExtResource("3_tfmqp")
region = Rect2(306, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rib1s"]
atlas = ExtResource("3_tfmqp")
region = Rect2(324, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_inr4y"]
atlas = ExtResource("3_tfmqp")
region = Rect2(342, 0, 18, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_r44s0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irc2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06mwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55cbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snnsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2dd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0rqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dljvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xoaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ley8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4u0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kp1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx6sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtorj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72be3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tq5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b62yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38p31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v86r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rib1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inr4y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_862gf"]
atlas = ExtResource("4_xnu0y")
region = Rect2(0, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojw2"]
atlas = ExtResource("4_xnu0y")
region = Rect2(18, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_83p4h"]
atlas = ExtResource("4_xnu0y")
region = Rect2(36, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7txj"]
atlas = ExtResource("4_xnu0y")
region = Rect2(54, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq3b4"]
atlas = ExtResource("4_xnu0y")
region = Rect2(72, 0, 18, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6ild"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_862gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83p4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7txj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq3b4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="oPrisonGenericToilet" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_rrg3p")
script = ExtResource("2_lg4k8")

[node name="sPrisonHead" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -12)
sprite_frames = SubResource("SpriteFrames_r44s0")
flip_h = true

[node name="sPrisonFace" type="AnimatedSprite2D" parent="sPrisonHead"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_b6ild")
flip_h = true

[node name="censor_bar_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="censor_bar_timer" to="." method="_on_censor_bar_timer_timeout"]
